--- a/index.html
+++ b/index.html
@@ -24,13 +24,22 @@ body {
   <div class="columns w-row">
     <div class="leftcontent w-col w-col-6 w-col-stack">
       <div data-w-id="b84f5156-c6e2-fb1d-6606-98a08030a472" style="opacity:0" class="image">
-                <!-- 或者保留原始视频方案，但确保路径正确 -->
-        -- <video autoplay muted loop playsinline class="video-background">
-          <source src="/DM-files.io/images/WeChat_20250108135856.MP4" type="video/mp4">
-        </video> -->
+        <video autoplay muted loop playsinline class="video-background">
+            <source src="images/WeChat_20250108135856.MP4" type="video/mp4">播放视频
+        </video>
       </div>
     </div>
     <div class="rightcontent w-col w-col-6 w-col-stack">
+      <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
+        <div class="name"> China Elite AAU</div>
+        <h1 class="tagline"><strong class="bold-text">Elite route</strong></h1>
+        <p class="bio">China Elite AAU球队是中国第一支成为青少年篮球运动员提供国际竞技平台的经纪团队。</p>
+        <p class="bio">China Elite 通过参加美国PUMA赞助的NXTPRO旗下联赛，为中国运动员提供与美国优秀运动员同场竞技的机会，直接对接超过70所NCAA大学的篮球教练。</p>
+          <div class="column w-col w-col-4">
+<!--
+            <div class="text-block-2">Connect</div>
+            <ul role="list" class="list w-list-unstyled">
+              <li>
                 <a href="#">Blog</a>
               </li>
               <li>
