--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
     <div class="leftcontent w-col w-col-6 w-col-stack">
       <div data-w-id="b84f5156-c6e2-fb1d-6606-98a08030a472" style="opacity:0" class="image">
         <video autoplay muted loop playsinline class="video-background">
-            <source src="images/WeChat_20250108135856.MP4" type="video/mp4">播放视频
+            <source src="DM-files.io\images\WeChat_20250108135856.MP4" type="video/mp4">播放视频
         </video>
       </div>
     </div>
