--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
       <div data-w-id="b84f5156-c6e2-fb1d-6606-98a08030a472" style="opacity:0" class="image">
         <video autoplay muted loop playsinline class="video-background">
           <!-- 假设你的仓库名为 DM-files.io -->
-          <source src="D:\dm files\DM-files.io\images\WeChat_20241228010420.mp4" type="video/mp4">
+          <source src="images/WeChat_20250108135856.mp4" type="video/mp4">
           <!-- 或者使用相对路径 -->
           <!-- <source src="./images/WeChat_20250108135856.mp4" type="video/mp4"> -->
         </video>
